# formula1_analytics

./: .gitignore  main.ipynb  main.py  pyproject.toml
src/: main.py
src/common/: data_loader.py
src/config/: config.py
src/formula1_analytics/: logger.py
src/formula1_analytics/common/: data_loader.py  data_processor.py  f1_data.py  index.py  index_manager.py
src/formula1_analytics/common/protocols/: data.py
src/formula1_analytics/config/: config.py
src/formula1_analytics/drivers/: driver_weather_perf.py  drivers.py  drivers_most_wins.py  drivers_plots.py  drivers_season_perf.py  exceptions.py  most_successful.py
src/formula1_analytics/races/: races.py
src/formula1_analytics/results/: results.py  results_processor.py
src/formula1_analytics/weather/: weather.py
